kubernetes-networks/canary/web-canary-svc-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-canary-svc-cip
spec:
  selector:
    app: web-canary
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
